<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:background="@color/lightest_yellow_orange2">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:background="@color/lightest_yellow_orange"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="HP Restaurant"
                android:textColor="@color/text_color"
                android:textSize="16sp"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_below="@id/tool_bar"
            android:text="@string/change_password"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_below="@id/activity_title"
        android:id="@+id/change_password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/lighter_bee"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:layout_marginStart="15dp"
                android:textColor="@color/text_color"/>


            <EditText
                android:id="@+id/current_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:hint="@string/current_password"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/ic_baseline_visibility_off_24"/>
            <TextView
                android:id="@+id/err_curr_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_password"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:textColor="@color/red"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/new_password"
                android:layout_marginStart="15dp"
                android:textColor="@color/text_color"/>


            <EditText
                android:id="@+id/new_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:hint="@string/new_password"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/ic_baseline_visibility_off_24"/>
            <TextView
                android:id="@+id/err_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_empty"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:textColor="@color/red"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/re_password"
                android:layout_marginStart="15dp"
                android:textColor="@color/text_color"/>


            <EditText
                android:id="@+id/re_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:hint="@string/re_password"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"

                android:background="@drawable/rounded_edittext"
                android:drawableEnd="@drawable/ic_baseline_visibility_off_24"/>
            <TextView
                android:id="@+id/err_re_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_password_incorrect"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:textColor="@color/red"
                android:visibility="invisible"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/yellow_orange"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:layout_below="@id/change_password_form"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/submit_button"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>