<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/backgroundIv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/logoCv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="18dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/hp_res_logo" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/phone_number_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="5dp"
        android:layout_below="@id/logoCv"
        android:weightSum="4">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_rememberLastSelection="true"
            app:ccp_defaultNameCode="VN"/>

        <EditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:hint="@string/phone_number"
            android:paddingStart="10dp"
            android:inputType="phone"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_edittext" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number_ll"
        android:layout_marginTop="20dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Mật khẩu: "
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_edittext"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/password_ll"
        android:paddingTop="5dp"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow_orange"
        android:layout_below="@id/password_ll"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:visibility="visible"/>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login_button"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:layout_below="@id/login_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bạn chưa có tài khoản? "
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/sign_up_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sign_up"/>
    </LinearLayout>

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progress_bar2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </eightbitlab.com.blurview.BlurView>


</RelativeLayout>