<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertInfoActivity"
    android:background="@color/lightest_yellow_orange2">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:background="@color/lightest_yellow_orange"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="HP Restaurant"
            android:textColor="@color/text_color"
            android:textSize="16sp"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:id="@+id/contentSV"
        android:layout_below="@id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="Thông tin cá nhân"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/change_password_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_title"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/lighter_bee"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_TextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/your_name"
                        app:boxStrokeColor="@color/yellow_orange"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@drawable/ic_baseline_error_24"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/ic_baseline_person_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/gender_TextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/gender"
                        app:boxStrokeColor="@color/lightest_yellow_orange"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@drawable/ic_baseline_error_24"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/ic_baseline_transgender_24">

                        <AutoCompleteTextView
                            android:id="@+id/gender_AutoCompleteTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_picker_TextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/date_of_birth_pick"
                        app:boxStrokeColor="@color/yellow_orange"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@drawable/ic_baseline_error_24"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_of_birth_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date|datetime"
                            android:maxLength="10" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_TextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="@color/yellow_orange"
                        app:errorEnabled="true"
                        app:errorIconDrawable="@drawable/ic_baseline_error_24"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_number_TextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:enabled="false"
                        android:hint="@string/phone_number"
                        app:boxStrokeColor="@color/yellow_orange"
                        app:helperTextTextColor="@color/red"
                        app:startIconDrawable="@drawable/ic_baseline_phone_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone_number_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:backgroundTint="@color/yellow_orange"
                android:layout_centerHorizontal="true"
                android:text="Lưu thông tin"
                android:layout_below="@id/change_password_form"
                android:visibility="visible"/>

        </RelativeLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>